--- a/app/src/main/res/layout/activity_info_viaje.xml
+++ b/app/src/main/res/layout/activity_info_viaje.xml
@@ -49,7 +49,25 @@
             android:id="@+id/btnAgregaViajeALista"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:onClick="Agrega"
-            android:text="Agregar a mi lista" />
+            android:text="@string/agregarAMiLista"
+            android:onClick="agregandoViajeAMiLista"/>
+        <Button
+            android:id="@+id/btnIrAPerfilOfertante"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/IrAPerfilOfertante"
+            android:onClick="yendoAPerfilDeLaPersona"/>
+        <Button
+            android:id="@+id/btnEliminarViajeDeLista"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/eliminarDeMiLista"
+            android:onClick="eliminandoViajeDeMiLista"/>
+        <Button
+            android:id="@+id/btnCalificarOfertante"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/calificarOfertante"
+            android:onClick="calificandoPersona"/>
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
