--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -9,7 +9,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="155dp"
-        android:background="@color/amarilloFuerte"
+        android:background="@color/salmon"
         android:elevation="5dp"/>
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -19,7 +19,9 @@
         android:layout_marginTop="77.5dp"
         android:src="@drawable/foto_perfil"
         android:elevation="10dp"/>
-
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="338dp"
@@ -73,7 +75,7 @@
                 <ImageView
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:src="@drawable/cara_feliz_icon" />
+                    android:src="@drawable/happy_face_icon" />
 
                 <TextView
                     android:id="@+id/noCaraFeliz"
@@ -91,7 +93,7 @@
                 <ImageView
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:src="@drawable/cara_triste_icon" />
+                    android:src="@drawable/sad_face_icon" />
 
                 <TextView
                     android:id="@+id/noCaraTriste"
@@ -109,7 +111,7 @@
                 <ImageView
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:src="@drawable/cara_enojada_icon" />
+                    android:src="@drawable/angry_face_icon" />
 
                 <TextView
                     android:id="@+id/noCaraEnojada"
@@ -119,5 +121,5 @@
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
-
+    </ScrollView>
 </FrameLayout>
