--- a/app/src/main/res/layout/activity_calificar_persona.xml
+++ b/app/src/main/res/layout/activity_calificar_persona.xml
@@ -1,30 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.CalificarPersonaActivity">
-
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/cara_feliz_icon"
-            android:onClick="SumaCaraFeliz"/>
-        <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/cara_triste_icon"
-            android:onClick="SumaCaraTriste"/>
-        <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/cara_enojada_icon"
-            android:onClick="SumaCaraEnojada"/>
+        android:layout_gravity="center"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/experiencia"
+            android:textSize="20dp"
+            android:layout_gravity="center"
+            android:layout_marginBottom="40dp"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/happy_face_icon"
+                android:onClick="SumaCaraFeliz"
+                android:layout_marginEnd="10dp"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/sad_face_icon"
+                android:onClick="SumaCaraTriste"
+                android:layout_marginEnd="10dp"
+                android:layout_marginStart="10dp"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/angry_face_icon"
+                android:onClick="SumaCaraEnojada"
+                android:layout_marginStart="10dp"/>
+        </LinearLayout>
     </LinearLayout>
-
-</android.support.constraint.ConstraintLayout>
+    </ScrollView>
+</FrameLayout>
