--- a/app/src/main/res/layout/activity_crea_ofertante.xml
+++ b/app/src/main/res/layout/activity_crea_ofertante.xml
@@ -19,6 +19,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/hint_nombre"
+                android:backgroundTint="@color/salmon"
                 android:inputType="textPersonName"
                 android:digits="abcdefghijklmnñopqrstuvxwyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ "
                 android:maxLength="20" />
@@ -27,6 +28,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
+                android:backgroundTint="@color/salmon"
                 android:digits="abcdefghijklmnñopqrstuvxwyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ "
                 android:maxLength="20"
                 android:hint="@string/hint_apellido_Paterno"/>
@@ -35,6 +37,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
+                android:backgroundTint="@color/salmon"
                 android:digits="abcdefghijklmnñopqrstuvxwyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ "
                 android:maxLength="20"
                 android:hint="@string/hint_apellido_Materno"/>
@@ -42,6 +45,7 @@
                 android:id="@+id/edad"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:backgroundTint="@color/salmon"
                 android:inputType="numberSigned"
                 android:maxLength="2"
                 android:hint="@string/hint_edad"/>
@@ -49,18 +53,21 @@
                 android:id="@+id/correo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:backgroundTint="@color/salmon"
                 android:inputType="textEmailAddress"
                 android:hint="@string/hint_correoElectronico"/>
             <EditText
                 android:id="@+id/contra"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:backgroundTint="@color/salmon"
                 android:inputType="textPassword"
                 android:hint="@string/hint_contraseña"/>
             <EditText
                 android:id="@+id/confirmaContra"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:backgroundTint="@color/salmon"
                 android:inputType="textPassword"
                 android:hint="@string/hint_confirma_Contraseña"/>
             <ImageView
@@ -68,7 +75,7 @@
                 android:layout_width="200dp"
                 android:layout_gravity="center"
                 android:layout_height="150dp"
-                android:background="@drawable/agrega_imagen_icon"
+                android:background="@drawable/nueva_imagen_icon"
                 android:onClick="corre"
                 android:elevation="20dp"
                 android:scaleType="centerCrop"/>
@@ -82,7 +89,7 @@
                 android:layout_marginTop="10dp"
                 android:background="@color/azulFuerte"
                 android:onClick="creaPersona"
-                android:textColor="@android:color/black"/>
+                android:textColor="@android:color/white"/>
         </LinearLayout>
     </ScrollView>
 </android.support.constraint.ConstraintLayout>
