--- a/app/src/main/res/layout/activity_crea_viaje.xml
+++ b/app/src/main/res/layout/activity_crea_viaje.xml
@@ -18,6 +18,7 @@
                 android:id="@+id/txtCarga"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:backgroundTint="@color/salmon"
                 android:inputType="text"
                 android:digits="abcdefghijklmnñopqrstuvxwyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ "
                 android:hint="@string/carga"
@@ -33,6 +34,7 @@
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:inputType="numberSigned"
+                    android:backgroundTint="@color/salmon"
                     android:maxLength="2"
                     android:hint="@string/cantidad"
                     />
@@ -45,6 +47,7 @@
             <Spinner
                 android:id="@+id/tipoCaja_spinner"
                 android:layout_width="match_parent"
+                android:layout_marginTop="10dp"
                 android:layout_height="wrap_content" />
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -67,13 +70,14 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="2dp"
-                android:background="@color/amarilloClaro"
+                android:background="@color/salmon"
                 android:layout_marginTop="10dp"/>
             <EditText
                 android:id="@+id/txtNomLugarSalida"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
+                android:backgroundTint="@color/salmon"
                 android:digits="abcdefghijklmnñopqrstuvxwyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ "
                 android:hint="@string/hint_nombreLugarSalida"
                 android:layout_marginTop="10dp"/>
@@ -81,6 +85,7 @@
                 android:id="@+id/txtNomLugarLlegada"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:backgroundTint="@color/salmon"
                 android:inputType="text"
                 android:digits="abcdefghijklmnñopqrstuvxwyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ "
                 android:hint="@string/hint_nombreLugarLlegada"
@@ -89,6 +94,7 @@
                 android:id="@+id/txtDescripcion"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
+                android:backgroundTint="@color/salmon"
                 android:inputType="textMultiLine"
                 android:hint="@string/hint_descripcion"
                 />
@@ -102,7 +108,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/hint_fecha"
-                    android:background="@color/azulFuerte"/>
+                    android:textColor="@color/blanco"
+                    android:background="@color/salmon"/>
                 <TextView
                     android:id="@+id/efecha"
                     android:layout_width="150dp"
@@ -119,7 +126,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/hint_hora"
-                    android:background="@color/azulFuerte"/>
+                    android:textColor="@color/blanco"
+                    android:background="@color/salmon"/>
                 <TextView
                     android:id="@+id/ehora"
                     android:layout_width="150dp"
@@ -141,6 +149,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="numberSigned"
+                    android:backgroundTint="@color/salmon"
                     android:hint="@string/hint_pago"
                     />
             </LinearLayout>
@@ -150,8 +159,8 @@
                 android:layout_height="wrap_content"
                 android:text="@string/registrame"
                 android:layout_gravity="center"
-                android:background="@color/amarilloClaro"
-                android:textColor="@android:color/black"
+                android:background="@color/salmon"
+                android:textColor="@color/blanco"
                 android:onClick="creaViaje"/>
         </LinearLayout>
     </ScrollView>
