--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -8,7 +8,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="155dp"
-        android:background="@color/amarilloFuerte"
+        android:background="@color/salmon"
         android:elevation="5dp"/>
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -18,7 +18,9 @@
         android:layout_marginTop="77.5dp"
         android:src="@drawable/foto_perfil"
         android:elevation="10dp"/>
-
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="338dp"
@@ -72,7 +74,7 @@
                 <ImageView
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:src="@drawable/cara_feliz_icon" />
+                    android:src="@drawable/happy_face_icon" />
 
                 <TextView
                     android:id="@+id/noCaraFeliz"
@@ -90,7 +92,7 @@
                 <ImageView
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:src="@drawable/cara_triste_icon" />
+                    android:src="@drawable/sad_face_icon" />
 
                 <TextView
                     android:id="@+id/noCaraTriste"
@@ -108,7 +110,7 @@
                 <ImageView
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    android:src="@drawable/cara_enojada_icon" />
+                    android:src="@drawable/angry_face_icon" />
 
                 <TextView
                     android:id="@+id/noCaraEnojada"
@@ -118,5 +120,5 @@
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
-
+    </ScrollView>
 </FrameLayout>
