--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,13 +2,11 @@
 <resources>
     <color name="colorPrimary">#00BCD4</color>
     <color name="colorPrimaryDark">#0097A7</color>
-    <color name="colorAccent">#FFFE00</color>
-
-    <color name="amarilloClaro">#FFFE00</color>
-    <color name="amarilloFuerte">#E6BA00</color>
+    <color name="colorAccent">#C8293D</color>
     <color name="azulClaro">#00BCD4</color>
     <color name="azulFuerte">#0097A7</color>
     <color name="gris">#262626</color>
     <color name="blanco">#ffffff</color>
     <color name="negro">#000000</color>
+    <color name="salmon">#C8293D</color>
 </resources>
