--- a/app/src/main/res/layout/activity_crea_ofertante.xml
+++ b/app/src/main/res/layout/activity_crea_ofertante.xml
@@ -63,15 +63,23 @@
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
                 android:hint="@string/hint_confirma_Contraseña"/>
+
             <ImageView
                 android:id="@+id/imagenId"
-                android:layout_width="200dp"
+                android:layout_width="164dp"
+                android:layout_height="132dp"
                 android:layout_gravity="center"
-                android:layout_height="150dp"
-                android:background="@drawable/agrega_imagen_icon"
-                android:onClick="corre"
+                android:background="@drawable/useramarillo"
                 android:elevation="20dp"
-                android:scaleType="centerCrop"/>
+                android:onClick="corre"
+                android:scaleType="centerCrop" />
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/btnImagen"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                app:srcCompat="@drawable/agrega_imagen_icon"
+                tools:srcCompat="@drawable/agrega_imagen_icon" />
 
             <Button
                 android:id="@+id/btnAgregaPersona"
@@ -83,6 +91,8 @@
                 android:background="@color/azulFuerte"
                 android:onClick="creaPersona"
                 android:textColor="@android:color/black"/>
+
+
         </LinearLayout>
     </ScrollView>
 </android.support.constraint.ConstraintLayout>
